--- a/DFBB87.html
+++ b/DFBB87.html
@@ -414,7 +414,10 @@
                                         <td> <label><strong>Modelo</strong>: RUNNER HFC 1132</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2011 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2011</label> </td>
+                                    </tr>
+                                    <tr>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,23 +427,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000294495</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193165</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 10-10-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 10-08-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 30-04-2025</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 10-02-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -450,23 +452,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000000294495</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193165</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 10-10-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 10-08-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 30-04-2025</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 10-02-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
