--- a/PSPK48.html
+++ b/PSPK48.html
@@ -424,7 +424,7 @@
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Region</strong>: II de Antofagasta</label>
+                                        <td> <label><strong>Region</strong>: XV de Arica y Parinacota</label>
                                         </td>
                                     </tr>
                                     <tr>
@@ -440,16 +440,16 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 29-03-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: ORMAZÁBAL HIJOS LTDA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: MIVAL ARICA SPA.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Av. Industrial N° 7200</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Avenida Argentina #2759</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Region</strong>: II de Antofagasta</label>
+                                        <td> <label><strong>Region</strong>: XV de Arica y Parinacota</label>
                                         </td>
                                     </tr>
                                     <tr>
@@ -465,10 +465,10 @@
                                         <td> <label><strong>Fecha Venc.</strong>: 29-03-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: ORMAZÁBAL HIJOS LTDA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: MIVAL ARICA SPA.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Av. Industrial N° 7200</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Avenida Argentina #2759</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
