--- a/LVHX26.html
+++ b/LVHX26.html
@@ -414,7 +414,10 @@
                                         <td> <label><strong>Modelo</strong>: WINGLE 5 G ELITE 2.2</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2020 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2020</label> </td>
+                                    </tr>
+                                    <tr>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,23 +427,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003322438</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000788321</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 12-03-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 09-09-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 12-09-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 30-09-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -450,23 +452,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003322438</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000788321</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 12-03-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 09-09-2025</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 12-09-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 30-09-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
