--- a/DFFW50.html
+++ b/DFFW50.html
@@ -414,7 +414,10 @@
                                         <td> <label><strong>Modelo</strong>: CANTER</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Año Fab.</strong>: 2011 </label> </td>
+                                        <td> <label><strong>Año Fab.</strong>: 2011</label> </td>
+                                    </tr>
+                                    <tr>
+                                        <td> <label><strong>Tipo Sello</strong>: SELLO VERDE</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION TECNICA</strong></label> </td>
@@ -424,23 +427,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003929236</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193284</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 05-04-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 19-01-2026</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 05-09-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 19-07-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>: REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>REVISION GASES</strong></label> </td>
@@ -450,23 +452,22 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>N° Cert</strong>: B1327000003929236</label> </td>
+                                        <td> <label><strong>N° Cert</strong>: B1332000000193284</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha</strong>: 05-04-2024</label> </td>
+                                        <td> <label><strong>Fecha</strong>: 19-01-2026</label> </td>
                                     </tr>
                                     <tr>
                                         <td> <label><strong>Estado</strong>: Aprobada</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Fecha Venc.</strong>: 05-09-2024</label> </td>
+                                        <td> <label><strong>Fecha Venc.</strong>: 19-07-2026</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Nombre PRT</strong>: CHILENA DE REVISIONES TÉCNICAS
-                                                SPA.</label> </td>
+                                        <td> <label><strong>Nombre PRT</strong>:  REVISIONES TÉCNICAS SAN DÁMASO S.A.</label> </td>
                                     </tr>
                                     <tr>
-                                        <td> <label><strong>Dirección PRT</strong>: Lo Blanco N°1789</label> </td>
+                                        <td> <label><strong>Dirección PRT</strong>: Av. Eyzaguirre N°3709</label> </td>
                                     </tr>
                                 </tbody>
                             </table>
